# advent-of-code

./: .gitignore  Cargo.toml  README.md  fetch-input  package-lock.json
.forgejo/workflows/: cargo.yml
2015/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  1.py  10.py  11.py  12.py  13.py  3.py  5.py  7.py  9.py  tools.py
2020/: 01.zig  02.zig  03.zig  04.zig  05.zig  06.zig  07.zig  08.zig  09.zig  10.zig  11.zig  12.zig
2021/: 01.c  02.c
2022/: 02.py
2023/: 01.py  01.rs  02.py  1.py  day8-partTwo.py  day9.py
2024/: 01.cpp  01.py  01.rs  01.ts  02.cpp  02.py  02.rs  03.cpp  03.rs  04.rs  05.rs  06.rs  07.py  07.rs  08.rs  09.rs  10.py  10.rs  11.rs  12.rs  Cargo.toml
data/puzzles/2021/: 01.md  02.md
data/puzzles/2024/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  09.md  10.md  11.md
data/puzzles/2025/: 05.md  06.md
src/: lib.rs  main.rs
src/2021/: 01.rs  02.rs
src/2024/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs
src/2025/: 05.rs  06.rs
src/solution/: mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
src/template/: aoc_cli.rs  day.rs  mod.rs  runner.rs
