[package]
name = "aoc"
default-run = "aoc"
edition = "2024"

[dependencies]
itertools = "0.14.0"
memoize = "0.5.1"
num-integer = "0.1.46"
regex = "1.11.1"

# runner dependencies
chrono = "0.4.38"
dhat = { version = "0.3.3", optional = true }
tinyjson = "2.5.1"
aoc-client = "0.2.0"
clap = { version = "4.5.53", features = ["cargo"] }

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
test_lib = []

# Shared code
# [lib]
# path = "lib.rs"

# [[bin]]
# name = "23-01"
# path = "2023/01.rs"

[[bin]]
name = "2024-01"
path = "src/2024/01.rs"

# [[bin]]
# name = "24-02"
# path = "2024/02.rs"

# [[bin]]
# name = "20-03"
# path = "2024/03.rs"

# [[bin]]
# name = "24-04"
# path = "2024/04.rs"

# [[bin]]
# name = "24-05"
# path = "2024/05.rs"

# [[bin]]
# name = "24-06"
# path = "2024/06.rs"

# [[bin]]
# name = "24-07"
# path = "2024/07.rs"

# [[bin]]
# name = "24-08"
# path = "2024/08.rs"

# [[bin]]
# name = "24-09"
# path = "2024/09.rs"

# [[bin]]
# name = "24-10"
# path = "2024/10.rs"

# [[bin]]
# name = "24-11"
# path = "2024/11.rs"

# [[bin]]
# name = "24-12"
# path = "2024/12.rs"
