[package]
name = "aoc"
default-run = "aoc"
edition = "2024"

[dependencies]
itertools = "0.14.0"
memoize = "0.5.1"
regex = "1.11.1"

# runner dependencies
chrono = "0.4.38"
dhat = { version = "0.3.3", optional = true }
tinyjson = "2.5.1"
aoc-client = "0.2.0"
clap = { version = "4.5.53", features = ["cargo"] }

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
test_lib = []

[[bin]]
name = "2021-01"
path = "src/2021/01.rs"

[[bin]]
name = "2021-02"
path = "src/2021/02.rs"

[[bin]]
name = "2024-01"
path = "src/2024/01.rs"

[[bin]]
name = "2024-02"
path = "src/2024/02.rs"

[[bin]]
name = "2024-03"
path = "src/2024/03.rs"

[[bin]]
name = "2024-04"
path = "src/2024/04.rs"

[[bin]]
name = "2024-05"
path = "src/2024/05.rs"

[[bin]]
name = "2024-06"
path = "src/2024/06.rs"

[[bin]]
name = "2024-07"
path = "src/2024/07.rs"

[[bin]]
name = "2024-08"
path = "src/2024/08.rs"

[[bin]]
name = "2024-09"
path = "src/2024/09.rs"

[[bin]]
name = "2024-10"
path = "src/2024/10.rs"

[[bin]]
name = "2024-11"
path = "src/2024/11.rs"

[[bin]]
name = "2024-12"
path = "src/2024/12.rs"

[[bin]]
name = "2025-05"
path = "src/2025/05.rs"

[[bin]]
name = "2025-06"
path = "src/2025/06.rs"
