[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
memoize = "0.5.1"
num-integer = "0.1.46"
regex = "1.11.1"

# Shared code
# [lib]
# path = "lib.rs"

[[bin]]
name = "01"
path = "01.rs"

[[bin]]
name = "02"
path = "02.rs"

[[bin]]
name = "03"
path = "03.rs"

[[bin]]
name = "04"
path = "04.rs"

[[bin]]
name = "05"
path = "05.rs"

[[bin]]
name = "06"
path = "06.rs"

[[bin]]
name = "07"
path = "07.rs"

[[bin]]
name = "08"
path = "08.rs"

[[bin]]
name = "09"
path = "09.rs"

[[bin]]
name = "10"
path = "10.rs"

[[bin]]
name = "11"
path = "11.rs"

[[bin]]
name = "12"
path = "12.rs"